syntax = "proto3";

package campaign;

service CampaignService {
  rpc GetByAuthorID(GetByAuthorIDRequest) returns (Campaign) {}
}

message Campaign {
  int64 id = 1;
  string title = 2;
  string description = 3;
  string target_amount = 4;
  string collected_amount = 5;
  float progress_percentage = 6;
  bool is_active = 7;
  string created_at = 8;
  string updated_at = 9;
}

message GetByAuthorIDRequest {
  int64 author_id = 1;
}
